# sim-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/readme-blueprint-generator/: SKILL.md
.github/workflows/: publish.yml
agent-skills/install-sim-windows/: SKILL.md
agent-skills/install-sim-windows-cn/: SKILL.md
agent-skills/install-sim-windows-cn/agents/: openai.yaml
agent-skills/install-sim-windows/agents/: openai.yaml
docs/: DEVELOPMENT.md  README.de.md  README.ja.md  README.zh.md  agent-readability.md  plugin-install.md
docs/architecture/: multi-session-and-config.md  skills-layering-plan.md  version-compat.md
src/sim/: __init__.py  _plugin_install.py  _runner_client.py  cli.py  compat.py  config.py  describe.py  driver.py  env_manager.py  inspect.py  plugins.py  runner.py  server.py  session.py  store.py
src/sim/_runners/: __init__.py  base.py
src/sim/_runners/comsol/: mph_runner.py
src/sim/_runners/fluent/: __init__.py  _common.py  pyfluent_037.py  pyfluent_038.py
src/sim/_runners/openfoam/: shell_runner.py
src/sim/_runners/pybamm/: runner.py
src/sim/drivers/: __init__.py
src/sim/drivers/abaqus/: __init__.py
src/sim/drivers/ansa/: __init__.py  compatibility.yaml  driver.py  runtime.py  schemas.py
src/sim/drivers/cantera/: __init__.py  driver.py
src/sim/drivers/cfx/: __init__.py  compatibility.yaml  driver.py
src/sim/drivers/comsol/: __init__.py  compatibility.yaml  driver.py
src/sim/drivers/coolprop/: driver.py
src/sim/drivers/flotherm/: __init__.py  _helpers.py  _win32_backend.py  compatibility.yaml  driver.py
src/sim/drivers/fluent/: __init__.py  compatibility.yaml  driver.py  queries.py  runtime.py  schemas.py
src/sim/drivers/hypermesh/: __init__.py  compatibility.yaml  driver.py
src/sim/drivers/icem/: __init__.py  compatibility.yaml  driver.py
src/sim/drivers/lsdyna/: __init__.py  compatibility.yaml  driver.py  runtime.py
src/sim/drivers/ltspice/: driver.py
src/sim/drivers/mapdl/: __init__.py  compatibility.yaml  driver.py  runtime.py
src/sim/drivers/matlab/: __init__.py  compatibility.yaml  driver.py
src/sim/drivers/mechanical/: __init__.py  compatibility.yaml  driver.py
src/sim/drivers/openfoam/: compatibility.yaml  driver.py
src/sim/drivers/pybamm/: compatibility.yaml  driver.py
src/sim/gui/: __init__.py  _pywinauto_tools.py  _win32_dialog.py
src/sim/testing/: __init__.py  protocol_conformance.py
tests/: conftest.py  test_cli.py  test_compat.py  test_comsol_driver.py  test_connect.py  test_flotherm_lint.py  test_lint.py  test_logs.py  test_mapdl_driver.py  test_matlab_driver.py  test_run.py  test_store.py  test_workbench_driver.py  test_workbench_integration.py
tests/base/: test_cli.py  test_compat.py  test_describe.py  test_init_setup.py  test_lint_public_corpus.py  test_logs.py  test_multi_session.py  test_plugin_install.py  test_plugins.py  test_protocol_conformance.py  test_run.py
tests/drivers/abaqus/: test_abaqus_driver.py  test_abaqus_e2e.py
tests/drivers/cantera/: test_cantera_driver.py  test_cantera_e2e.py
tests/drivers/cfx/: test_cfx_driver.py  test_cfx_e2e.py
tests/drivers/comsol/: test_comsol_driver.py  test_describe.py  test_mph_inspect.py
tests/drivers/coolprop/: test_coolprop_driver.py
tests/drivers/flotherm/: test_flotherm_detect.py  test_flotherm_lint.py  test_logfile_xml_helpers.py
tests/drivers/fluent/: test_fluent_mixing_elbow.py
tests/drivers/hypermesh/: test_hypermesh_driver.py
tests/drivers/icem/: test_icem_driver.py
tests/drivers/lsdyna/: test_lsdyna_dpf_e2e.py  test_lsdyna_driver.py  test_lsdyna_e2e.py  test_lsdyna_session.py
tests/drivers/ltspice/: test_ltspice_driver.py
tests/drivers/mapdl/: test_mapdl_driver.py  test_mapdl_session.py
tests/drivers/matlab/: test_matlab_driver.py
tests/drivers/starccm/: test_starccm_driver.py
tests/drivers/workbench/: test_workbench_driver.py  test_workbench_integration.py
tests/execution/: mechanical_e2e_static_structural.py  mechanical_observation_coupling.py  mechanical_tdd_smoke.py  run_ex01.ps1  run_ex05.ps1  run_helpers.ps1
tests/execution/abaqus/: abaqus_e2e_cantilever.com  abaqus_e2e_cantilever.msg  abaqus_e2e_cantilever.odb  abaqus_e2e_cantilever.prt  abaqus_e2e_cantilever.sta
tests/execution/cantera/: adiabatic_flame.py
tests/execution/cfx/: test_cfx_session_e2e.py
tests/execution/fluent/: run_batch1.ps1  run_ex02.ps1  solve_beam.py  solve_e2e.py  solve_two_pipes.py
tests/execution/lsdyna/: d3dump01  d3hsp  d3plot  d3plot01  d3plot02  dpf_visualize.py  e2e_summary.json  glstat  messag  single_hex_tension.k  status.out
tests/execution/mechanical/: material_designer_real_run.py  mechanical_e2e_static_structural.py  mechanical_observation_coupling.py  mechanical_tdd_smoke.py
tests/execution/snippets/: 04_setup_material.py  05b_setup_bcs_ex02.py
tests/execution/starccm/: starccm_smoke_test.java
tests/fixtures/: cantera_good.py  cantera_no_usage.py  cantera_syntax_error.py
tests/fixtures/cfx/: cfx_good.ccl  cfx_minimal.def  cfx_no_flow.ccl
tests/fixtures/icem/: icem_bad_braces.tcl  icem_good.tcl  icem_no_markers.tcl  not_tcl.py
tests/fixtures/lsdyna/: lsdyna_good.k  lsdyna_minimal.k  lsdyna_no_keyword.k  lsdyna_no_nodes.k
tests/fixtures/mapdl/: mapdl_good.py  mapdl_no_import.py  mapdl_no_launch.py  mapdl_raw_apdl.py  mapdl_syntax_error.py
tests/fixtures/starccm/: starccm_good.java  starccm_no_get_sim.java  starccm_no_star_macro.java
tests/gui/: test_connect_tools_field.py
tests/inspect/: e2e_ansa_probe_wiring.py  e2e_cfx_probe_wiring.py  e2e_comsol_surface_mount.py  e2e_flotherm_mobile_demo.py  integration_comsol_agent_dialogue.py  integration_comsol_gui_dismiss.py  integration_flotherm_win32_migration.py  integration_fluent_agent_dialogue.py  integration_fluent_mixing_elbow.py  probe_describe_physics.py  probe_headless_solve.py  test_channel_3_4_5_9.py  test_comsol_run_wires_probes.py  test_driver_probe_wiring.py  test_fluent_run_wires_probes.py  verify_msp_field.py
tools/: extract_driver.py  lint-public-corpus.py
(+17 files in other folders)
