[project]
name = "sim-cli"
version = "0.2.0"
description = "Make every engineering tool agent-native — a CLI runtime that lets LLM agents launch, drive, and observe CAD/CAE software"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
# sim-cli runs every solver in its own process; the SDK (pyfluent, mph,
# matlabengine, …) is installed alongside sim-cli into the same env. Pick
# the SDK that matches the solver version you actually have. compat.yaml
# documents which combinations are supported.
dependencies = [
    "click>=8.0",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pyyaml>=6.0",          # reads driver compatibility.yaml files
    "Pillow>=10",           # sim screenshot endpoint uses PIL.ImageGrab
    "lxml>=5.0",            # XSD validation for FloSCRIPT lint
]

[project.optional-dependencies]
# Convenience extras for installing a solver SDK alongside sim-cli. These
# are not exclusive — pick whichever matches your local solver install.
# 0.38 dropped Fluent 2024 R1 (v241) from FluentVersion enum and the
# PYFLUENT_FLUENT_ROOT workaround no longer bypasses the post-connect
# scheme_eval.version check — see Phase 1 STATUS §3.1. Widen to 0.37 so
# hosts with Fluent 2024 R1 installed work out of the box.
fluent  = ["ansys-fluent-core>=0.37,<0.39"]
matlab  = ["matlabengine"]
comsol  = ["mph>=1.2,<2.0"]
pybamm  = ["pybamm>=24.0"]
ltspice = ["spicelib>=1.0"]  # raw/log parsing; driver falls back to regex if absent
dev     = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
sim = "sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires solver packages installed"]

[tool.ruff]
target-version = "py310"
